# play-me-a-record

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt
play_me_a_record/: __about__.py  __main__.py  config.py  main.py  play.py
tests/: __init__.py  test_shelf  test_shelf.py
